--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,12 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
+ "scripts": {
+  "start": "react-scripts start",
+  "build": "node ./node_modules/react-scripts/scripts/build.js",
+  "test": "react-scripts test --env=jsdom",
+  "eject": "react-scripts eject"
+},
   "browserslist": {
     "production": [
       ">0.2%",
